--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,12 @@ h1 {
     height: 100%;
     border: 0;
 }
+
+.resp-iframe-slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
